--- a/scripts/manual_validation_results.qmd
+++ b/scripts/manual_validation_results.qmd
@@ -113,7 +113,7 @@ final_data |>
   count(registry2)
 ```
 
-# Discrepancy analysis count
+# Discrepancy analysis statistics
 
 These analyses are going to be conducted in only the pairs that were considered `TRUE` cross-registrations
 
@@ -139,7 +139,7 @@ The analysis was conducted on 200 observations, from which 186 were EUCTR-Clinic
 
 ### Percentages main analysis
 
-```{r}
+```{r message = FALSE, warning = FALSE}
 
 #overall
 discrepancy_data |>
@@ -283,49 +283,56 @@ discrepancy_data |>
 
 ### Count of observations included in the analysis
 
-This is limited to confirmed cross-registrations with a date in both registries (i.e. when we had missing data in one or more registries, this was excluded from the analysis).
+This is limited to confirmed cross-registrations with a date in both registries (i.e. when we had missing data in one or more registries, this was excluded from the analysis). Additionally, we filtered for overall recruitment status = Completed for both registries.
 
 ```{r message = FALSE, warning = FALSE}
 
 discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   count(is.na(completion_month_year_reg1))
 
 discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   count(is.na(completion_month_year_reg2))
 ```
 
-For registry1 (EUCTR), there were 210 pairs that were confirmed cross-registrations and no missing data on completion-date. For registry 2 (ClinicalTrials.gov or DRKS), the 233 observations had data. Therefore, the analysis was conducted in 210 pairs.
+For registry1 (EUCTR), there were 192 pairs that were confirmed cross-registrations and no missing data on completion-date. For registry 2 (ClinicalTrials.gov or DRKS), the 200 observations had data. Therefore, the analysis was conducted in 192 pairs.
 
 ```{r message = FALSE, warning = FALSE}
 
 discrepancy_data |>
   filter(registry2 == "ClinicalTrials.gov") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   count(is.na(completion_month_year_reg1))
 
 discrepancy_data |>
   filter(registry2 == "DRKS") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   count(is.na(completion_month_year_reg1))
 ```
 
-Of those 210 pairs, 196 were EUCTR-ClinicalTrials.gov and 14 were EUCTR-DRKS.
+Of those 210 pairs, 178 were EUCTR-ClinicalTrials.gov and 14 were EUCTR-DRKS.
 
 ### Percentages
 
 ```{r message = FALSE, warning = FALSE}
 
 discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   filter(!is.na(completion_month_year_reg1)) |>
   count(completion_month_year_reg1 == completion_month_year_reg2) |>
   mutate(percentage = round(n / sum(n) * 100, 0))
 
 discrepancy_data |>
   filter(registry2 == "ClinicalTrials.gov") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   filter(!is.na(completion_month_year_reg1)) |>
   count(completion_month_year_reg1 == completion_month_year_reg2) |>
   mutate(percentage = round(n / sum(n) * 100, 0))
 
 discrepancy_data |>
   filter(registry2 == "DRKS") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   filter(!is.na(completion_month_year_reg1)) |>
   count(completion_month_year_reg1 == completion_month_year_reg2) |>
   mutate(percentage = round(n / sum(n) * 100, 0))
@@ -337,6 +344,7 @@ discrepancy_data |>
 
 #for all cases
 discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   filter(!is.na(completion_month_year_reg1)) |>
   mutate(
     completion_month_year_reg1 = ymd(paste0(completion_month_year_reg1, "-01")),
@@ -352,6 +360,7 @@ discrepancy_data |>
 
 #for only discrepant cases
 discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   filter(completion_month_year_reg1 != completion_month_year_reg2) |>
   filter(!is.na(completion_month_year_reg1)) |>
   mutate(
@@ -365,6 +374,49 @@ discrepancy_data |>
             median_difference = median(month_difference, na.rm = TRUE),  
             mean_difference = mean(month_difference, na.rm = TRUE),      
             sd_difference = sd(month_difference, na.rm = TRUE))
+```
+
+### Percentage of cases where EUCTR completion date was before/after/same
+
+```{r message = FALSE, warning = FALSE}
+
+#overall
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         !is.na(completion_month_year_reg1)) |>
+  mutate(date_comparison = case_when(
+    completion_month_year_reg1 < completion_month_year_reg2 ~ "Earlier",
+    completion_month_year_reg1 > completion_month_year_reg2 ~ "Later",
+    TRUE ~ "Same")) |>
+  count(date_comparison) |>
+  mutate(percentage = n / sum(n) * 100)
+
+#ClinicalTrials.gov
+discrepancy_data |>
+  filter(registry2 == "ClinicalTrials.gov") |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         !is.na(completion_month_year_reg1)) |>
+  mutate(date_comparison = case_when(
+    completion_month_year_reg1 < completion_month_year_reg2 ~ "Earlier",
+    completion_month_year_reg1 > completion_month_year_reg2 ~ "Later",
+    TRUE ~ "Same")) |>
+  count(date_comparison) |>
+  mutate(percentage = n / sum(n) * 100)
+
+#DRKS
+discrepancy_data |>
+  filter(registry2 == "DRKS") |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         !is.na(completion_month_year_reg1)) |>
+  mutate(date_comparison = case_when(
+    completion_month_year_reg1 < completion_month_year_reg2 ~ "Earlier",
+    completion_month_year_reg1 > completion_month_year_reg2 ~ "Later",
+    TRUE ~ "Same")) |>
+  count(date_comparison) |>
+  mutate(percentage = n / sum(n) * 100)
 ```
 
 # Discrepancy analysis figures
@@ -1167,6 +1219,7 @@ print(completion_combined_plot)
 #plot for clinical trials, with addition of new layers for the matching observations
 all_obs_ctgov <- discrepancy_data |>
   filter(registry2 == "ClinicalTrials.gov") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   filter(!is.na(completion_month_year_reg1) & !is.na(completion_month_year_reg2)) |>
   mutate(completion_month_year_reg1 = as.Date(paste0(completion_month_year_reg1, "-01"), format = "%Y-%m-%d"),
          completion_month_year_reg2 = as.Date(paste0(completion_month_year_reg2, "-01"), format = "%Y-%m-%d"),
@@ -1208,6 +1261,7 @@ all_obs_ctgov <- discrepancy_data |>
 #plot for drks without adding the labels but with the new color layer: 
 all_obs_drks <- discrepancy_data |>
   filter(registry2 == "DRKS") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
   filter(!is.na(completion_month_year_reg1) & !is.na(completion_month_year_reg2)) |>
   mutate(completion_month_year_reg1 = as.Date(paste0(completion_month_year_reg1, "-01"), format = "%Y-%m-%d"),
          completion_month_year_reg2 = as.Date(paste0(completion_month_year_reg2, "-01"), format = "%Y-%m-%d"),
@@ -1246,6 +1300,311 @@ all_obs_drks <- discrepancy_data |>
   guides(color = guide_legend(override.aes = list(size = 3)))
 
 #combine plot
+completion_combined_plot2 <- all_obs_ctgov + all_obs_drks + plot_layout(nrow =  2)
+print(completion_combined_plot2)
+```
+
+### Sensitivity analysis completion date
+
+Sensitivity analysis of completion date present in the German member state protocol, instead of the result section. We used data from euctr data dump to retrieve the completion date from protocols.
+
+#### Load data dump euctr
+
+```{r message = FALSE, warning = FALSE}
+
+euctr_data <- read.csv(here::here("data", "euctr_dump.csv"), sep = ",")
+```
+
+#### Check that all trn from discrepancy_data are included in euctr_data
+
+```{r message = FALSE, warning = FALSE}
+
+#some trn1 may have spaces before/after, 
+#they will be removed from both datasets to ensure full match
+discrepancy_data <- discrepancy_data |>
+  mutate(trn1 = str_replace_all(trn1, " ", ""))
+
+euctr_data <- euctr_data |>
+  mutate(eudract_number = str_replace_all(eudract_number, " ", ""))
+
+#check that all trn1 from final_data are in euctr_data
+missing_trn1 <- setdiff(discrepancy_data$trn1, euctr_data$eudract_number)
+
+if (length(missing_trn1) == 0) {
+  cat("All trn1 values are included in eudract_number.\n")
+} else {
+  cat("The following trn1 values are missing from eudract_number:\n")
+  print(missing_trn1)
+}
+```
+
+#### Selecting completion_date from euctr_data
+
+```{r message = FALSE, warning = FALSE}
+
+#select data of interest from euctr dump dataset
+euctr_data_filtered <- euctr_data |>
+  select(eudract_number_with_country, eudract_number, date_of_the_global_end_of_the_trial) |>
+  filter(eudract_number %in% discrepancy_data$trn1, 
+         str_detect(eudract_number_with_country, "DE"))
+```
+
+When filtering **euctr_data**, we get 227 but **discrepancy_data** has 233.
+
+Further investigation on duplicates in **discrepancy_data** is needed:
+
+```{r message = FALSE, warning = FALSE}
+
+#identify missing cases
+discrepancy_data |>
+  filter(!trn1 %in% euctr_data_filtered$eudract_number) |>
+  select(trn1, general_comment)
+
+#I get 6 missing IDs, all not having DE protocol.
+```
+
+#### Adding new completion date to discrepancy data
+
+```{r message = FALSE, warning = FALSE}
+
+#add data from date_of_the_global_end_of_the_trial to final_data
+discrepancy_data <- discrepancy_data |>
+  left_join(euctr_data_filtered |>
+      select(eudract_number, 
+             completion_date_protocol = date_of_the_global_end_of_the_trial),
+             by = c("trn1" = "eudract_number"))
+```
+
+#### Missing data (both NA and empty cells) for new variable
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  summarise(
+    missing_count = sum(is.na(completion_date_protocol) | completion_date_protocol == ""),
+    total_rows = n()
+  ) |>
+  mutate(missing_percentage = (missing_count / total_rows) * 100)
+```
+
+#### Create new variable month_year for completion_date_protocol
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data <- discrepancy_data |>
+  mutate(completion_month_year_protocol = format(as.Date(completion_date_protocol, 
+                                                         format = "%Y-%m-%d"), "%Y-%m")) |>
+  relocate(completion_month_year_protocol, .after = completion_date_protocol)
+```
+
+#### Count of observations per registry
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  count(is.na(completion_month_year_protocol))
+
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  count(is.na(completion_month_year_reg2))
+```
+
+#### Percentages
+
+```{r message = FALSE, warning = FALSE}
+
+discrepancy_data |>
+  filter(!is.na(completion_month_year_protocol)) |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  count(completion_month_year_protocol == completion_month_year_reg2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+
+discrepancy_data |>
+  filter(registry2 == "ClinicalTrials.gov") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  filter(!is.na(completion_month_year_protocol)) |>
+  count(completion_month_year_protocol == completion_month_year_reg2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+
+discrepancy_data |>
+  filter(registry2 == "DRKS") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  filter(!is.na(completion_month_year_protocol)) |>
+  count(completion_month_year_protocol == completion_month_year_reg2) |>
+  mutate(percentage = round(n / sum(n) * 100, 0))
+```
+
+#### Descriptive statistics
+
+```{r message = FALSE, warning = FALSE}
+
+#for all cases
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  filter(!is.na(completion_month_year_protocol)) |>
+  mutate(
+    completion_month_year_protocol = ymd(paste0(completion_month_year_protocol, "-01")),
+    completion_month_year_reg2 = ymd(paste0(completion_month_year_reg2, "-01")),
+    month_difference = abs(interval(completion_month_year_protocol, 
+                                    completion_month_year_reg2) / months(1))
+    ) |>
+  summarize(min_difference = min(month_difference, na.rm = TRUE),  
+            max_difference = max(month_difference, na.rm = TRUE),
+            median_difference = median(month_difference, na.rm = TRUE),  
+            mean_difference = mean(month_difference, na.rm = TRUE),      
+            sd_difference = sd(month_difference, na.rm = TRUE))
+
+#for only discrepant cases
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  filter(completion_month_year_protocol != completion_month_year_reg2) |>
+  filter(!is.na(completion_month_year_protocol)) |>
+  mutate(
+    completion_month_year_protocol = ymd(paste0(completion_month_year_protocol, "-01")),
+    completion_month_year_reg2 = ymd(paste0(completion_month_year_reg2, "-01")),
+    month_difference = abs(interval(completion_month_year_protocol, 
+                                    completion_month_year_reg2) / months(1))
+    ) |>
+  summarize(min_difference = min(month_difference, na.rm = TRUE),  
+            max_difference = max(month_difference, na.rm = TRUE),
+            median_difference = median(month_difference, na.rm = TRUE),  
+            mean_difference = mean(month_difference, na.rm = TRUE),      
+            sd_difference = sd(month_difference, na.rm = TRUE))
+```
+
+#### Percentage of cases where EUCTR completion date was before DRKS/CTgov
+
+```{r message = FALSE, warning = FALSE}
+
+#overall
+discrepancy_data |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         !is.na(completion_month_year_protocol)) |>
+  mutate(date_comparison = case_when(
+    completion_month_year_protocol < completion_month_year_reg2 ~ "Earlier",
+    completion_month_year_protocol > completion_month_year_reg2 ~ "Later",
+    TRUE ~ "Same")) |>
+  count(date_comparison) |>
+  mutate(percentage = n / sum(n) * 100)
+
+#ClinicalTrials.gov
+discrepancy_data |>
+  filter(registry2 == "ClinicalTrials.gov") |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         !is.na(completion_month_year_protocol)) |>
+  mutate(date_comparison = case_when(
+    completion_month_year_protocol < completion_month_year_reg2 ~ "Earlier",
+    completion_month_year_protocol > completion_month_year_reg2 ~ "Later",
+    TRUE ~ "Same")) |>
+  count(date_comparison) |>
+  mutate(percentage = n / sum(n) * 100)
+
+#DRKS
+discrepancy_data |>
+  filter(registry2 == "DRKS") |>
+  filter(overall_recruitment_status_reg1 == "Completed",
+         overall_recruitment_status_reg2 == "Completed",
+         !is.na(completion_month_year_protocol)) |>
+  mutate(date_comparison = case_when(
+    completion_month_year_protocol < completion_month_year_reg2 ~ "Earlier",
+    completion_month_year_protocol > completion_month_year_reg2 ~ "Later",
+    TRUE ~ "Same")) |>
+  count(date_comparison) |>
+  mutate(percentage = n / sum(n) * 100)
+```
+
+#### Replication of completion date graph
+
+```{r message = FALSE, warning = FALSE}
+
+#ClinicalTrials.gov with updated variable
+all_obs_ctgov <- discrepancy_data |>
+  filter(registry2 == "ClinicalTrials.gov") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  filter(!is.na(completion_month_year_protocol) & !is.na(completion_month_year_reg2)) |>
+  mutate(completion_month_year_protocol = as.Date(paste0(completion_month_year_protocol, "-01"), format = "%Y-%m-%d"),
+         completion_month_year_reg2 = as.Date(paste0(completion_month_year_reg2, "-01"), format = "%Y-%m-%d"),
+         time_diff = abs(completion_month_year_reg2 - completion_month_year_protocol),
+         is_equal = completion_month_year_protocol == completion_month_year_reg2) |>
+  arrange(time_diff) |>
+  mutate(trn1 = factor(trn1, levels = trn1)) |>
+  ggplot(aes(y = trn1, 
+             x = completion_month_year_protocol,
+             xend = completion_month_year_reg2)) +
+  geom_dumbbell(color = "darkgray",  
+                size = 1,            
+                dot_guide = FALSE,   
+                size_x = 3,          
+                size_xend = 3,       
+                colour_x = "#3594cc",     
+                colour_xend = "#8cc5e3") + 
+  geom_point(data = . %>% filter(is_equal),
+             aes(x = completion_month_year_protocol, shape = "Both match"),
+             color = "#e79f31", 
+             size = 3.3) +
+  theme_classic() +
+  theme(axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        legend.position = "top") +  
+  labs(x = "Year of completion\n(EUCTR - ClinicalTrials.gov)",
+       y = "Pairs of cross-registered trials") +  
+  scale_x_date(date_breaks = "1 year", date_labels = "%Y") +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("EUCTR", levels = c("EUCTR", "ClinicalTrials.gov"))), size = 3) +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("ClinicalTrials.gov", levels = c("EUCTR", "ClinicalTrials.gov"))), size = 3) +
+  scale_color_manual(name = "Registry",
+                     values = c("EUCTR" = "#3594cc", 
+                                "ClinicalTrials.gov" = "#8cc5e3"),
+                     labels = c("EUCTR", "Other registry")) +
+  scale_shape_manual(values = c("Both match" = 16), labels = c("Both match" = "Both match")) +
+  guides(color = guide_legend(order = 1, override.aes = list(size = 3)),
+         shape = guide_legend(order = 2, title = NULL))
+
+#DRKS with updated variable
+all_obs_drks <- discrepancy_data |>
+  filter(registry2 == "DRKS") |>
+  filter(overall_recruitment_status_reg1 == "Completed" & overall_recruitment_status_reg2 == "Completed") |>
+  filter(!is.na(completion_month_year_protocol) & !is.na(completion_month_year_reg2)) |>
+  mutate(completion_month_year_protocol = as.Date(paste0(completion_month_year_protocol, "-01"), format = "%Y-%m-%d"),
+         completion_month_year_reg2 = as.Date(paste0(completion_month_year_reg2, "-01"), format = "%Y-%m-%d"),
+         time_diff = abs(completion_month_year_reg2 - completion_month_year_protocol),
+         is_equal = completion_month_year_protocol == completion_month_year_reg2) |>
+  arrange(time_diff) |>
+  mutate(trn1 = factor(trn1, levels = trn1)) |>
+  ggplot(aes(y = trn1, 
+             x = completion_month_year_protocol,
+             xend = completion_month_year_reg2)) +
+  geom_dumbbell(color = "darkgray",  
+                size = 1,            
+                dot_guide = FALSE,   
+                size_x = 3,          
+                size_xend = 3,       
+                colour_x = "#3594cc",     
+                colour_xend = "#8cc5e3") + 
+  geom_point(data = . %>% filter(is_equal),
+             aes(x = completion_month_year_protocol),
+             shape = 16,  
+             color = "#e79f31", 
+             size = 3.3) +
+  theme_classic() +
+  theme(axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        legend.position = "none") +  
+  labs(x = "Year of completion\n(EUCTR - DRKS)",
+       y = "Pairs of cross-registered trials") +  
+  scale_x_date(date_breaks = "1 year", date_labels = "%Y") +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("EUCTR", levels = c("EUCTR", "DRKS"))), size = 3) +
+  geom_point(aes(x = as.Date(NA), y = NA, color = factor("DRKS", levels = c("EUCTR", "DRKS"))), size = 3) +
+  scale_color_manual(name = "Registry",
+                     values = c("EUCTR" = "#3594cc", 
+                                "DRKS" = "#8cc5e3"),
+                     labels = c("EUCTR", "Other registry")) +
+  guides(color = guide_legend(override.aes = list(size = 3)))
+
+#combined plot
 completion_combined_plot2 <- all_obs_ctgov + all_obs_drks + plot_layout(nrow =  2)
 print(completion_combined_plot2)
 ```
